# matrix-oxide

./: Cargo.toml  README.md
benchmarks/: Cargo.toml
benchmarks/src/: main.rs
src/: activation.rs  lib.rs  matrix.rs  numbers.rs  random.rs  vector.rs
